# k-rs.me

./: Cargo.toml
.github/workflow/: check.yml
.github/workflows/: check.yml  rust.yml
domains/: a.domain.json
src/: main.rs
