[package]
name = "gitdomain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.32.0"
tokio = { version = "1.0.0", features = ["full"] }
serde_json = { version = "1.0.108", features = [] }
base64 = "0.21.5"
log = "0.4.20"
pretty_env_logger = "0.5.0"
jsonwebtoken = "9.2.0"